[package]
name = "Webserver"
version = "0.1.0"
authors = ["Raboliot le gris <jordan@raboland.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
rocket-multipart-form-data = "0.8.1"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "serve"]